Check is process is not running and check if Firefox crash report is present

--- a/EPNMonitoring/appsettings.json
+++ b/EPNMonitoring/appsettings.json
@@ -27,7 +27,12 @@
     }
   },
   "ProcessMonitor": {
-    "CheckIntervalSeconds": 10,
-    "Executables": [ "notepad", "explorer" ]
+    "CheckIntervalSeconds": 60,
+    "Executables": [ "notepad", "explorerter" ]
+  },
+  "CrashReportMonitor": {
+    "FolderPath": "C:\\Users\\vdh_m\\AppData\\Roaming\\Mozilla\\Firefox\\Crash Reports\\pending",
+    "CheckIntervalSeconds": 60,
+    "DestinationFolder": "C:\\Users\\vdh_m\\AppData\\Roaming\\Mozilla\\Firefox\\Crash Reports\\archived"
   }
 }
