Add Windows Edition check + DNS VLMCS entry + KMS communication on port 1688

--- a/EPNMonitoring/appsettings.json
+++ b/EPNMonitoring/appsettings.json
@@ -28,11 +28,21 @@
   },
   "ProcessMonitor": {
     "CheckIntervalSeconds": 60,
-    "Executables": [ "notepad", "explorerter" ]
+    "Executables": [ "notepad", "explorer" ]
   },
   "CrashReportMonitor": {
     "FolderPath": "C:\\Users\\vdh_m\\AppData\\Roaming\\Mozilla\\Firefox\\Crash Reports\\pending",
-    "CheckIntervalSeconds": 60,
+    "CheckIntervalSeconds": 300,
     "DestinationFolder": "C:\\Users\\vdh_m\\AppData\\Roaming\\Mozilla\\Firefox\\Crash Reports\\archived"
+  },
+  "WindowsLicenseMonitor": {
+    "CheckIntervalSeconds": 3600,
+    "ExpectedEdition": "Enterprise",
+    "KmsServer": "kms.yourdomain.local",
+    "KmsServerPort": 1688,
+    "KmsDnsEntry": "_vlmcs._tcp"
+  },
+  "LocalLog": {
+    "FilePath": "C:\\temp\\ai-internal.log"
   }
 }
