Add Check WebSites + Devices +Verbose or not logging

--- a/EPNMonitoring/appsettings.json
+++ b/EPNMonitoring/appsettings.json
@@ -27,8 +27,10 @@
     }
   },
   "ProcessMonitor": {
-    "CheckIntervalSeconds": 60,
-    "Executables": [ "notepad", "explorer" ]
+    "CheckIntervalSeconds": 5,
+    "Executables": [
+      "notepad"
+    ]
   },
   "CrashReportMonitor": {
     "FolderPath": "C:\\Users\\vdh_m\\AppData\\Roaming\\Mozilla\\Firefox\\Crash Reports\\pending",
@@ -36,13 +38,33 @@
     "DestinationFolder": "C:\\Users\\vdh_m\\AppData\\Roaming\\Mozilla\\Firefox\\Crash Reports\\archived"
   },
   "WindowsLicenseMonitor": {
-    "CheckIntervalSeconds": 3600,
+    "CheckIntervalSeconds": 30,
     "ExpectedEdition": "Enterprise",
-    "KmsServer": "kms.yourdomain.local",
+    "KmsServer": "SWLICAPPLI022.gial.be",
     "KmsServerPort": 1688,
     "KmsDnsEntry": "_vlmcs._tcp"
   },
   "LocalLog": {
     "FilePath": "C:\\temp\\ai-internal.log"
+  },
+  "WebsiteMonitor": {
+    "CheckIntervalSeconds": 30,
+    "Sites": [
+      "https://www.microsoft.com",
+      "https://1.1.1.1",
+      "https://www.github.com"
+    ]
+  },
+  "VerboseLogging": {
+    "AppInsight": true,
+    "Local": true
+  },
+  "DeviceMonitor": {
+    "Devices": [
+      "USB Serial Device",
+      "Intel(R) Ethernet Connection",
+      "NVIDIA GeForce"
+    ],
+    "CheckIntervalSeconds": 60
   }
 }
