--- a/EPNMonitoring/EPNMonitoring.csproj
+++ b/EPNMonitoring/EPNMonitoring.csproj
@@ -10,5 +10,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.23.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
+    <PackageReference Include="System.Management" Version="9.0.5" />
   </ItemGroup>
 </Project>
