Bug KMS Verbose log

--- a/EPNMonitoring/EPNMonitoring.csproj
+++ b/EPNMonitoring/EPNMonitoring.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="C:\Users\vdh_m\SynologyDrive\Repository\MonitoringEPN\appsettings.json" Link="appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.23.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
     <PackageReference Include="System.Management" Version="9.0.5" />
