--- a/EPNMonitoring/appsettings.json
+++ b/EPNMonitoring/appsettings.json
@@ -66,5 +66,14 @@
       "NVIDIA GeForce"
     ],
     "CheckIntervalSeconds": 60
+  },
+  "PortTestsMonitor": {
+    "LogonServer": "192.168.8.6",
+    "CheckIntervalSeconds": 20,
+    "PortTests": [
+      { "Title": "DNS", "Port": 53 },
+      { "Title": "LDAP", "Port": 389 },
+      { "Title": "Kerberos", "Port": 88 }
+    ]
   }
 }
