Add Licence Activation polssibility with restart

--- a/EPNMonitoring/appsettings.json
+++ b/EPNMonitoring/appsettings.json
@@ -20,11 +20,7 @@
     "EnableRequestTrackingTelemetryModule": false,
     "EnableWindowsHeartbeatTelemetryModule": false,
     "EnableDiagnosticsTelemetryModule": true,
-    "EnableInternalTelemetry": true,
-    "InternalLogger": {
-      "LogLevel": "Information",
-      "LogFilePath": "ai-internal.log"
-    }
+    "EnableInternalTelemetry": true
   },
   "ProcessMonitor": {
     "CheckIntervalSeconds": 5,
@@ -42,7 +38,10 @@
     "ExpectedEdition": "Enterprise",
     "KmsServer": "SWLICAPPLI022.gial.be",
     "KmsServerPort": 1688,
-    "KmsDnsEntry": "_vlmcs._tcp"
+    "KmsDnsEntry": "_vlmcs._tcp",
+    "KMSKey": "XXXXX-XXXXX-XXXXX-XXXXX-XXXXX",
+    "EnableActivation": true,
+    "RestartAfterActivation": true
   },
   "LocalLog": {
     "FilePath": "C:\\temp\\ai-internal.log"
