--- a/EPNMonitoring/EPNMonitoring.csproj
+++ b/EPNMonitoring/EPNMonitoring.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>dotnet-EPNMonitoring-0eb51dc8-0602-4fe7-a4d5-bcfdf469d10a</UserSecretsId>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
