Modify Server Port Closed / Opened Telemetry title, add autoclean log every 2h

--- a/EPNMonitoring/appsettings.json
+++ b/EPNMonitoring/appsettings.json
@@ -44,7 +44,9 @@
     "RestartAfterActivation": true
   },
   "LocalLog": {
-    "FilePath": "C:\\temp\\ai-internal.log"
+    "FilePath": "C:\\temp\\ai-internal.log",
+    "MaxLogSize": 10485760,
+    "Autoclean": true
   },
   "WebsiteMonitor": {
     "CheckIntervalSeconds": 30,
@@ -55,8 +57,8 @@
     ]
   },
   "VerboseLogging": {
-    "AppInsight": true,
-    "Local": true
+    "AppInsight": false,
+    "Local": false
   },
   "DeviceMonitor": {
     "Devices": [
