Add Event Viewer monitor

--- a/EPNMonitoring/appsettings.json
+++ b/EPNMonitoring/appsettings.json
@@ -56,6 +56,12 @@
       "https://www.github.com"
     ]
   },
+  "EventViewerMonitor": {
+    "CheckIntervalSeconds": 60,
+    "Applications": [
+      "notepad.exe"
+    ]
+  },
   "VerboseLogging": {
     "AppInsight": false,
     "Local": false
