Add EventViewer Monitoring + README.md

--- a/EPNMonitoring/appsettings.json
+++ b/EPNMonitoring/appsettings.json
@@ -7,15 +7,15 @@
   },
   "ApplicationInsights": {
     "ConnectionString": "InstrumentationKey=f5d7e3f6-35b0-45d3-a11e-8044b1a238c6;IngestionEndpoint=https://westeurope-5.in.applicationinsights.azure.com/;LiveEndpoint=https://westeurope.livediagnostics.monitor.azure.com/;ApplicationId=e2cc060a-31b5-4e2f-a3aa-61c65e279e2c",
-    "EnableDebugLogger": true,
-    "EnableAdaptiveSampling": false,
-    "EnablePerformanceCounterCollectionModule": false,
+    //"EnableDebugLogger": true,
+    "EnableAdaptiveSampling": true,
+    "EnablePerformanceCounterCollectionModule": true,
     "EnableQuickPulseMetricStream": false,
     "EnableDependencyTrackingTelemetryModule": false,
     "EnableAppServicesHeartbeatTelemetryModule": false,
     "EnableAzureInstanceMetadataTelemetryModule": false,
     "EnableEventCounterCollectionModule": false,
-    "EnableHeartbeat": false,
+    "EnableHeartbeat": true,
     "EnableLiveMetrics": false,
     "EnableRequestTrackingTelemetryModule": false,
     "EnableWindowsHeartbeatTelemetryModule": false,
@@ -23,7 +23,7 @@
     "EnableInternalTelemetry": true
   },
   "ProcessMonitor": {
-    "CheckIntervalSeconds": 5,
+    "CheckIntervalSeconds": 30,
     "Executables": [
       "notepad"
     ]
@@ -34,11 +34,11 @@
     "DestinationFolder": "C:\\Users\\vdh_m\\AppData\\Roaming\\Mozilla\\Firefox\\Crash Reports\\archived"
   },
   "WindowsLicenseMonitor": {
-    "CheckIntervalSeconds": 30,
+    "CheckIntervalSeconds": 300,
     "ExpectedEdition": "Enterprise",
-    "KmsServer": "SWLICAPPLI022.gial.be",
-    "KmsServerPort": 1688,
-    "KmsDnsEntry": "_vlmcs._tcp",
+    //"KmsServer": "SWLICAPPLI022.gial.be",
+    //"KmsServerPort": 1688,
+    //"KmsDnsEntry": "_vlmcs._tcp",
     "KMSKey": "XXXXX-XXXXX-XXXXX-XXXXX-XXXXX",
     "EnableActivation": true,
     "RestartAfterActivation": true
@@ -54,6 +54,12 @@
       "https://www.microsoft.com",
       "https://1.1.1.1",
       "https://www.github.com"
+    ]
+  },
+  "EventViewerMonitor": {
+    "CheckIntervalSeconds": 60,
+    "Applications": [
+      "notepad.exe"
     ]
   },
   "VerboseLogging": {
@@ -72,9 +78,7 @@
     "LogonServer": "192.168.8.6",
     "CheckIntervalSeconds": 20,
     "PortTests": [
-      { "Title": "DNS", "Port": 53 },
-      { "Title": "LDAP", "Port": 389 },
-      { "Title": "Kerberos", "Port": 88 }
+      { "Title": "DNS", "Port": 53 }
     ]
   }
 }
