Remove Connection String from appsettings.json + README + EventviewerChecker

--- a/EPNMonitoring/appsettings.json
+++ b/EPNMonitoring/appsettings.json
@@ -6,8 +6,7 @@
     }
   },
   "ApplicationInsights": {
-    "ConnectionString": "InstrumentationKey=f5d7e3f6-35b0-45d3-a11e-8044b1a238c6;IngestionEndpoint=https://westeurope-5.in.applicationinsights.azure.com/;LiveEndpoint=https://westeurope.livediagnostics.monitor.azure.com/;ApplicationId=e2cc060a-31b5-4e2f-a3aa-61c65e279e2c",
-    //"EnableDebugLogger": true,
+    "ConnectionString": "APP_INSIGHTS_CONNECTION_STRING",
     "EnableAdaptiveSampling": true,
     "EnablePerformanceCounterCollectionModule": true,
     "EnableQuickPulseMetricStream": false,
@@ -36,9 +35,6 @@
   "WindowsLicenseMonitor": {
     "CheckIntervalSeconds": 300,
     "ExpectedEdition": "Enterprise",
-    //"KmsServer": "SWLICAPPLI022.gial.be",
-    //"KmsServerPort": 1688,
-    //"KmsDnsEntry": "_vlmcs._tcp",
     "KMSKey": "XXXXX-XXXXX-XXXXX-XXXXX-XXXXX",
     "EnableActivation": true,
     "RestartAfterActivation": true
