--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# appsettings.json with connection string or sensitive data
+appsettings.json
+
 # User-specific files
 *.rsuser
 *.suo
