--- a/EPNMonitoring/appsettings.json
+++ b/EPNMonitoring/appsettings.json
@@ -33,7 +33,7 @@
     "DestinationFolder": "C:\\Users\\vdh_m\\AppData\\Roaming\\Mozilla\\Firefox\\Crash Reports\\archived"
   },
   "WindowsLicenseMonitor": {
-    "CheckIntervalSeconds": 300,
+    "CheckIntervalSeconds": 30,
     "ExpectedEdition": "Enterprise",
     "KMSKey": "XXXXX-XXXXX-XXXXX-XXXXX-XXXXX",
     "EnableActivation": true,
@@ -49,7 +49,8 @@
     "Sites": [
       "https://www.microsoft.com",
       "https://1.1.1.1",
-      "https://www.github.com"
+      "https://www.github.com",
+      "https://qoutedocklcelkjkeuiuoifefeere.com"
     ]
   },
   "EventViewerMonitor": {
@@ -60,13 +61,14 @@
   },
   "VerboseLogging": {
     "AppInsight": false,
-    "Local": false
+    "Local": true
   },
   "DeviceMonitor": {
     "Devices": [
       "USB Serial Device",
       "Intel(R) Ethernet Connection",
-      "NVIDIA GeForce"
+      "NVIDIA GeForce",
+      "MyBalls"
     ],
     "CheckIntervalSeconds": 60
   },
