Add Kiosk Session Check

--- a/EPNMonitoring/appsettings.json
+++ b/EPNMonitoring/appsettings.json
@@ -76,7 +76,19 @@
     "LogonServer": "192.168.8.6",
     "CheckIntervalSeconds": 20,
     "PortTests": [
-      { "Title": "DNS", "Port": 53 }
+      {
+        "Title": "DNS",
+        "Port": 53
+      }
+    ]
+  },
+  "KioskUser": {
+    "CheckIntervalSeconds": 30,
+    "Users": [
+      "legion7\\vdh_m",
+      "VBX\\KioskEPN",
+      "VBX\\KioskEPNDev",
+      "VBX\\KioskUser"
     ]
   }
 }
