Add Multiple servers for port check

--- a/EPNMonitoring/appsettings.json
+++ b/EPNMonitoring/appsettings.json
@@ -50,7 +50,6 @@
       "https://www.microsoft.com",
       "https://1.1.1.1",
       "https://www.github.com",
-      "https://qoutedocklcelkjkeuiuoifefeere.com"
     ]
   },
   "EventViewerMonitor": {
@@ -68,17 +67,19 @@
       "USB Serial Device",
       "Intel(R) Ethernet Connection",
       "NVIDIA GeForce",
-      "MyBalls"
     ],
     "CheckIntervalSeconds": 60
   },
   "PortTestsMonitor": {
-    "LogonServer": "192.168.8.6",
     "CheckIntervalSeconds": 20,
-    "PortTests": [
+    "Servers": [
       {
-        "Title": "DNS",
-        "Port": 53
+        "Name": "192.168.8.6",
+        "Ports": [23, 22]
+      },
+      {
+        "Name": "myserver.domain.local",
+        "Ports": [80, 443]
       }
     ]
   },
