Add Enabling option

--- a/EPNMonitoring/appsettings.json
+++ b/EPNMonitoring/appsettings.json
@@ -22,17 +22,20 @@
     "EnableInternalTelemetry": true
   },
   "ProcessMonitor": {
+    "Enabled": true,
     "CheckIntervalSeconds": 30,
     "Executables": [
       "notepad"
     ]
   },
   "CrashReportMonitor": {
+    "Enabled": true,
     "FolderPath": "C:\\Users\\vdh_m\\AppData\\Roaming\\Mozilla\\Firefox\\Crash Reports\\pending",
     "CheckIntervalSeconds": 300,
     "DestinationFolder": "C:\\Users\\vdh_m\\AppData\\Roaming\\Mozilla\\Firefox\\Crash Reports\\archived"
   },
   "WindowsLicenseMonitor": {
+    "Enabled": true,
     "CheckIntervalSeconds": 30,
     "ExpectedEdition": "Enterprise",
     "KMSKey": "XXXXX-XXXXX-XXXXX-XXXXX-XXXXX",
@@ -40,11 +43,13 @@
     "RestartAfterActivation": true
   },
   "LocalLog": {
+    "Enabled": true,
     "FilePath": "C:\\temp\\ai-internal.log",
     "MaxLogSize": 10485760,
     "Autoclean": true
   },
   "WebsiteMonitor": {
+    "Enabled": false,
     "CheckIntervalSeconds": 30,
     "Sites": [
       "https://www.microsoft.com",
@@ -53,6 +58,7 @@
     ]
   },
   "EventViewerMonitor": {
+    "Enabled": true,
     "CheckIntervalSeconds": 60,
     "Applications": [
       "notepad.exe"
@@ -63,33 +69,33 @@
     "Local": true
   },
   "DeviceMonitor": {
+    "Enabled": true,
     "Devices": [
       "USB Serial Device",
       "Intel(R) Ethernet Connection",
-      "NVIDIA GeForce",
     ],
     "CheckIntervalSeconds": 60
   },
   "PortTestsMonitor": {
+    "Enabled": false,
     "CheckIntervalSeconds": 20,
     "Servers": [
       {
-        "Name": "192.168.8.6",
-        "Ports": [23, 22]
+        "Name": "swrdsupport016",
+        "Ports": [3389]
       },
       {
-        "Name": "myserver.domain.local",
-        "Ports": [80, 443]
+        "Name": "SWLICAPPLI022",
+        "Ports": [1688]
       }
     ]
   },
   "KioskUser": {
+    "Enabled": true,
     "CheckIntervalSeconds": 30,
     "Users": [
-      "legion7\\vdh_m",
       "VBX\\KioskEPN",
-      "VBX\\KioskEPNDev",
-      "VBX\\KioskUser"
+      "VBX\\KioskEPNDev"
     ]
   }
 }
