Add online printer check

--- a/EPNMonitoring/appsettings.json
+++ b/EPNMonitoring/appsettings.json
@@ -97,5 +97,11 @@
       "VBX\\KioskEPN",
       "VBX\\KioskEPNDev"
     ]
+  },
+  "DefaultPrinter": {
+    "Enabled": true,
+    "Name": "HP96",
+    "CheckIntervalSeconds": 60,
+    "ForceDefault": true
   }
 }
