enable check port

--- a/EPNMonitoring/appsettings.json
+++ b/EPNMonitoring/appsettings.json
@@ -77,7 +77,7 @@
     "CheckIntervalSeconds": 60
   },
   "PortTestsMonitor": {
-    "Enabled": false,
+    "Enabled": true,
     "CheckIntervalSeconds": 20,
     "Servers": [
       {
