add check windows version + installed update

--- a/EPNMonitoring/appsettings.json
+++ b/EPNMonitoring/appsettings.json
@@ -103,5 +103,8 @@
     "Name": "HP96",
     "CheckIntervalSeconds": 60,
     "ForceDefault": true
+  },
+  "UpdateLog": {
+    "FilePath": "C:\\temp\\windows-updates.log"
   }
 }
